Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66605

QSaveFile::fileTime() fails after QSaveFile::commit()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P4: Low P4: Low
    • 6.8.0 FF
    • 5.10.0
    • Core: I/O
    • None
    • [^qtbug.zip]
    • ba2f79459 (dev)

      QSaveFile::fileTime() fails after QSaveFile::commit() and causes console message "Empty filename passed to function". Can be reproduced with the attached console application "app" (qtbug.zip). Note, that a similar sequence with QFile works.

        1. qtbug.zip
          0.6 kB
          Winfried Schenke
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dfaure_kdab David Faure
            wschenke Winfried Schenke
            Alex Blasche Alex Blasche
            Vladimir Minenko Vladimir Minenko
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes